--- a/css/_people.scss
+++ b/css/_people.scss
@@ -2,9 +2,9 @@
 .people {
   position: relative;
   float: right;
-  left: 10px;
+  right: -10px;
   margin-top: 42px;
-  overflow-y: hidden;
+  overflow:hidden;
   padding-left:200px;
   
   
@@ -25,9 +25,7 @@
       border-radius: 100px;
       z-index: 500;
       box-shadow: 0px 0px 0px 3px #FFF;
-      -webkit-backface-visibility: hidden;
       
-      -moz-backface-visibility: hidden;
       @include transition (all 0.4s cubic-bezier(0.19, 1, 0.22, 1));
     }
 
